# deptrack-builder

./: README.md  deptrack-builder.cabal  stack.yaml
app/: Main.hs
src/: Recipes.hs
