name:                deptrack-builder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lucasdicioccio/deptrack-builder#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           Apache-2.0
category:            Devops
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Recipes
  build-depends:       base >= 4.7 && < 5
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-recipes
                     , distributed-closure
                     , string-conversions
  default-language:    Haskell2010

executable deptrack-builder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deptrack-builder
                     , containers
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-recipes
                     , string-conversions
  default-language:    Haskell2010

test-suite deptrack-builder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , deptrack-builder
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-recipes
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/deptrack-builder
